<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">


    <TextView
        android:id="@+id/player"
        android:layout_width="169dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:text="@string/player"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/game_username"
        android:layout_width="172dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/game_username"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/points"
        android:layout_width="169dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:text="@string/points"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_username" />

    <TextView
        android:id="@+id/user_point"
        android:layout_width="166dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:text="@string/user_point"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/points" />

</androidx.constraintlayout.widget.ConstraintLayout>