<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <TextView
        android:id="@+id/question1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/question_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/corect_answer"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/correct_answer"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/detalis_button"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/detalis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/corect_answer"
        tools:ignore="MissingConstraints,UsingOnClickInXml"
        android:onClick="details_onClick"/>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:onClick="remove_onClick"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detalis_button"
        app:layout_constraintTop_toBottomOf="@+id/corect_answer"
        tools:ignore="MissingConstraints,UsingOnClickInXml" />


</androidx.constraintlayout.widget.ConstraintLayout>